# calimero-sdk-rs

./: README.md  publish.sh
calimero-sdk/: Cargo.toml
calimero-sdk-macros/: Cargo.toml
calimero-sdk-macros/src/: lib.rs
calimero-sdk/src/: lib.rs  macros.rs
example/: Cargo.toml  README.md
example/src/: lib.rs  main.rs
